# Theater-App-Sockets

./: .gitignore  CMakeLists.txt  README.md  Relatório.docx  shows.csv  showsxml.xlsx
.github/workflows/: cmake-single-platform.yml
Lab2/: Lab2.sln  Lab2.vcxproj  client.c  server.c
Lab2/Client/: Client.vcxproj  client.c
Lab2/Server/: Server.vcxproj  server.c
Mutexes/: CountToTwentyMux.c  CountToTwentyNoMux.c  Mutexes.sln
Mutexes/CountWithMutex/: CountToTwentyMux.c  CountWithMutex.vcxproj  CountWithMutex.vcxproj.filters
Mutexes/CountWithoutMutex/: CountToTwentyNoMux.c  CountWithoutMutex.vcxproj  CountWithoutMutex.vcxproj.filters
Mutexes/Server/: Server.vcxproj  Server.vcxproj.filters  mtserver.c
Mutexes/Threads/: Threads.vcxproj  Threads.vcxproj.filters  ThreadsComMutexes.c
TheaterApp/: CMakeLists.txt
TheaterApp/Client/: Client.vcxproj  main.cpp  utils.cpp  utils.h
TheaterApp/Server/: Client.cpp  Client.h  Log.cpp  Log.h  Server.vcxproj  Server.vcxproj.filters  client.cpp  client.h  clients.json  main.cpp  shows.json  theater_log.cpp  theater_log.h  utils.cpp  utils.h
TheaterApp/TheaterLibrary/: Message.cpp  Message.h  Show.cpp  Show.h  Theater.cpp  Theater.h  TheaterLibrary.vcxproj  TheaterLibrary.vcxproj.filters  message.cpp  message.h  show.cpp  show.h  theater.cpp  theater.h
TheaterSolution/: TheaterSolution.sln
TheaterSolution/Client/: Client.vcxproj  Client.vcxproj.filters  client.c  client.cpp  main.cpp  utils.cpp  utils.h
TheaterSolution/Server/: Client.cpp  Client.h  List.c  List.h  Server.vcxproj  Server.vcxproj.filters  Show.cpp  Show.h  Theater.c  Theater.cpp  Theater.h  Theaters.cpp  Theaters.h  clients.json  csv.h  main.cpp  server.c  server.cpp  shows.csv  shows.json  stringtotime.c  stringtotime.h  temp.json  utils.cpp  utils.h
TheaterSolution/Server/CSV/: csv.c  fread_csv_line.c
TheaterSolution/TheaterLib/: Show.cpp  Show.h  Theater.cpp  TheaterLib.cpp  TheaterLib.vcxproj  TheaterLib.vcxproj.filters  csv.h  json.hpp
TheaterSolution/TheaterLibrary/: Message.cpp  Message.h  Show.cpp  Show.h  Theater.cpp  Theater.h  TheaterLibrary.vcxproj  TheaterLibrary.vcxproj.filters
src/client/: Client.vcxproj  client.cpp  client.h  main.cpp  utils.h
src/lib/: extensions.h  handler.h  message.h  messages.h  show.h  socket_error.h  sockets.h  theater.cpp  theater.h
src/server/: client.h  clients.json  main.cpp  server.cpp  server.h  server_client.h  shows.json  utils.cpp  utils.h
